feat: configure ESLint and Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,3 +28,5 @@
 }
 
 // feat: initial project setup with TypeScript and dependencies - Development on 2025-05-21
+
+// feat: configure ESLint and Prettier - Development on 2025-05-22
